js to fix vh on mobile

--- a/src/static/index.css
+++ b/src/static/index.css
@@ -29,7 +29,7 @@
 }
 
 html {
-  font-size: 0.9em;
+  font-size: 0.8em;
   scroll-behavior: smooth;
 }
 body,
@@ -42,13 +42,15 @@ header {
   position: relative;
   z-index: 1;
   display: flex;
+  justify-content: space-between;
   flex-direction: column;
-  padding: 0.75rem;
-  gap: calc(2 * var(--general_line-height));
+  align-items: center;
+  padding: 0.2rem;
 }
 
 #socials {
   display: flex;
+  flex-direction: column;
   width: 100%;
   gap: calc(0.5 * var(--general_line-height));
   padding-bottom: calc(0.5 * var(--general_line-height));
@@ -71,9 +73,10 @@ main {
   overflow-y: auto;
 }
 section {
-  min-height: 100vh;
+  overflow-y: scroll;
   border-radius: 1rem 1rem 0px 0px;
-  padding: calc(4 * var(--general_line-height)) calc(2 * var(--general_line-height));
+  /* padding: calc(4 * var(--general_line-height)) calc(2 * var(--general_line-height)); */
+  padding: calc(1 * var(--general_line-height)) calc(1 * var(--general_line-height));
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -151,7 +154,7 @@ p,
 section[data-type="bright"] {
   background-color: var(--color-light);
   color: var(--color-dark);
-  /* position: relative; */
+  position: relative;
 }
 section[data-type="transparent"] {
   color: var(--color-light);
@@ -170,12 +173,22 @@ section[data-type="darker"] {
 nav {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  /* height: 100%; */
 }
 nav ul {
+  display: none;
   margin-top: auto;
 }
 /* ? end of Nav */
+
+/* ? Header */
+header aside p {
+  display: none;
+}
+/* header aside {
+  height: 100vh;
+} */
+/* ? end of Header */
 
 /* ? Hero */
 #hero {
